CHANGELOG RoundCube Webmail
---------------------------

2008/09/29 (alec)
----------
- Added 'mime_param_folding' option with possibility to choose 
  long/non-ascii attachment names encoding eg. to be readable
  in MS Outlook/OE (#1485320)
- Added "advanced options" feature in User Preferences

2008/09/25 (alec)
----------
- Fix problem with non-ascii attachment names in Mail_mime (#1485267, #1485096)

2008/09/23 (alec)
----------
- Fix language autodetection (#1485401)
- Fix button label in folders management (#1485405)
- Fix collapsed folder not indicating unread msgs count of all subfolders (#1485403)
- Fix handling of apostrophes in filenames decoded according to rfc2231

2008/09/19 (thomasb)
----------
- Made config files location configurable (#1485215)

2008/09/16 (alec)
----------
- Reduced memory footprint when forwarding attachments (#1485345)
- Fix inline images handling when replying/forwarding html messages
- Allow and use spellcheck attribute for input/textarea fields (#1485060)
- Added icons for forwarded/forwarded+replied messages (#1485257)
- Added Reply-To to forwarded emails (#1485315)
- Display progress message for folders create/delete/rename (#1485357)
- Smart Tags and NOBR tag support in html messages (#1485363, #1485327)

2008/09/15 (thomasb)
----------
- Redesign of the identities settings (#1484042)
- Add config option to disable creation/deletion of identities (#1484498)

2008/09/15 (alec)
----------
- Added 'sendmail_delay' option to restrict messages sending interval (#1484491)

2008/09/12 (alec)
----------
- Added vertical splitter for folders list resizing
- Added possibility to view all headers in message view
- Fixed splitter drag/resize on Opera (#1485170)
- Fixed quota img height/width setting from template (#1484857)

2008/09/12 (thomasb)
----------
- Refactor drag & drop functionality. Don't rely on browser events anymore (#1484453)
- Insert "virtual" folders in subscription list (#1484779)